change poll attribute schema

--- a/ureport/templates/ureport/home.html
+++ b/ureport/templates/ureport/home.html
@@ -9,7 +9,7 @@
 {% block top_js %}
     <script language="javascript">
   $(document).ready(function() {
-        $('#viz').load('/bestviz?pks=l');
+        $('#viz').load('/bestviz/?pks=l');
     });
     </script>
 {% endblock %}
@@ -21,10 +21,9 @@
 </div>
 <a name="poll_results"></a>
 <div class="poll_list">
-{% load ureport %}
 <ul>
     {% for p in polls %}
-    {% if p.start_date and p|viewable %}
+    {% if p.start_date and p.viewable %}
         <li>
             <span class="poll-date">{{ p.start_date|date:"d/M/Y" }}</span> :
             {{ p.question }}
