--- a/ureport/templates/ureport/partials/polls/response_row.html
+++ b/ureport/templates/ureport/partials/polls/response_row.html
@@ -1,13 +1,12 @@
 {% extends row_base %}
 {% block message_information %}
-     {%if  perms.rapidsms.view_numbers %}
+
     <td class="response_sender_col">
       <a href="{% url ureport.views.ureporter_profile  response.message.connection.pk %}">
-          {{ message.connection_id }}
+          {{ response.message.connection_id }}
       </a>
        at {{ response.message.date|date:"d/m/Y H:i" }}
     </td>
-    {% endif %}
 {% endblock %}
 {% block actions_cell %}
     {%if  perms.rapidsms.view_numbers %}
