cleaning up excel

--- a/ureport/templates/ureport/ureporters_base.html
+++ b/ureport/templates/ureport/ureporters_base.html
@@ -117,7 +117,7 @@ $("#id_enddate").datepicker({ dateFormat: 'dd/mm/yy' ,changeYear: true ,changeMo
             {{download_form.as_table}}
             <tr><td><input  type="submit" value="Download"></td></tr>
 
-            <tr><td>  <tr><td><a class="export_link" href="{{ MEDIA_URL }}ureport/spreadsheets/ureporters.xlsx">Export All To Excel</a></td></td></tr>
+            <tr><td>  <tr><td><a class="export_link" href="{{ MEDIA_URL }}ureport/spreadsheets/ureporters.xls">Export All To Excel</a></td></td></tr>
         </table>
     </div>
     <div class="tab-pane " id="send_custom">
