--- a/ureport/templates/ureport/polls/alerts.html
+++ b/ureport/templates/ureport/polls/alerts.html
@@ -384,7 +384,7 @@
                 <table>
                     <tr>
                         <td><input type="text" name="search"></td>
-                        <td><input type="submit" value="Search"></td
+                        <td><input type="submit" value="Search"></td>
 
                 </table>
             </form>  </span>
