fixed the forward button

--- a/ureport/templates/ureport/polls/alerts.html
+++ b/ureport/templates/ureport/polls/alerts.html
@@ -165,7 +165,7 @@
 
                 });
 
-        $('.msg_rep_link').each(function (index, elem) {
+        $('.msg_rep').each(function (index, elem) {
 
             $(elem)
                     .bind('ajax:before', function (exhr, status, error) {
