--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -94,7 +94,7 @@
 	                   <li><a href="{% url flaggedmessages %}">FLAGGED MESSAGES</a></li>
                         <li><a href="{% url mp_dashboard %}">MP BARAZA</a></li>
                          <li><a href="{% url classifier %}">A-CLASS</a></li>
-                    <li><a href="{% url alerts %}">Real Time</a></li>
+                    <li><a href="{% url alerts %}">REAL TIME</a></li>
 	                {% else %}
 	                   <li><a href="/accounts/login">LOGIN</a></li>
 	                {% endif %}
