--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -113,8 +113,8 @@
 	                   <li><a href="{% url messagelog %}">MESSAGE LOG</a></li>
 	                   <li><a href="{% url ureport-contact %}">UREPORTERS</a></li>
 	                   <li><a href="{% url flaggedmessages %}">FLAGGED MESSAGES</a></li>
-                        <li><a href="{% url classifier %}">MESSAGE CLASSIFICATION</a></li>
-                    <li><a href="{% url alerts %}">Real Time</a></li>
+                        <li><a href="{% url classifier %}">A-CLASS</a></li>
+                    <li><a href="{% url alerts %}">REAL TIME</a></li>
 	                {% else %}
 	                   <li><a href="/accounts/login">LOGIN</a></li>
 	                {% endif %}
