ibm_logo and forward button

--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -98,6 +98,7 @@
 	           <img src="{{ MEDIA_URL }}ureport/images/scouts_logo.png"/>
 	           <img src="{{ MEDIA_URL }}ureport/images/cou_logo.png"/>
 	           <img src="{{ MEDIA_URL }}ureport/images/gem_logo.png"/>
+               <img src="{{ MEDIA_URL }}ureport/images/ibm_logo.jpg" />
 	       </div>
 	       <div class="footerlinks">
 	           <div class="nav-bottom">
@@ -120,7 +121,7 @@
 	                {% endif %}
                 </ul>
 	           </div>
-	           <p>Copyright &copy; 2010 - 2011 UNICEF et al.</p>
+	           <p>Copyright &copy; 2010 - 2012 UNICEF et al.</p>
 	        </div>
 	    </div>
     </div>
