--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -77,6 +77,7 @@
 	           <img src="{{ MEDIA_URL }}ureport/images/scouts_logo.png"/>
 	           <img src="{{ MEDIA_URL }}ureport/images/cou_logo.png"/>
 	           <img src="{{ MEDIA_URL }}ureport/images/gem_logo.png"/>
+               <img src="{{ MEDIA_URL }}ureport/images/ibm_logo.jpg" />
 	       </div>
 	       <div class="footerlinks">
 	           <div class="nav-bottom">
@@ -100,7 +101,7 @@
 	                {% endif %}
                 </ul>
 	           </div>
-	           <p>Copyright &copy; 2010 - 2011 UNICEF et al.</p>
+	           <p>Copyright &copy; 2010 - 2012 UNICEF et al.</p>
 	           <p>RapidSMS and Ureport are available under the BSD license.</p>
 	        </div>
 	    </div>
