[Argha] refer to each poll by a name, makes it easier to account for number of polls displayed

--- a/ureport/templates/ureport/home.html
+++ b/ureport/templates/ureport/home.html
@@ -24,7 +24,7 @@
 <ul id="list_of_polls">
     {% for p in polls %}
     {% if p.start_date and p.viewable %}
-        <li id="poll_record">
+        <li name="poll">
             <span class="poll-date">{{ p.start_date|date:"d/M/Y" }}</span> :
             {{ p.question }}
             <a href="javascript:void(0)" 
