--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -54,7 +54,7 @@
                 <li><a href="/#poll_results">POLL RESULTS</a></li>
                 <li><a href="/about_ureport/">ABOUT UREPORT</a></li>
                 <li><a href="/join/">HOW TO JOIN</a></li>
-                <li><a href="{% url pulse %}">NATIONAL PULSE</a> </li>
+{#                <li><a href="{% url pulse %}">NATIONAL PULSE</a> </li>#}
                 </ul>
             </div>
 
@@ -108,7 +108,7 @@
 	                <li><a href="/#poll_results">POLL RESULTS</a></li>
 	                <li><a href="about_ureport">ABOUT UREPORT</a></li>
 	                <li><a href="/join/">HOW TO JOIN</a></li>
-                    <li><a href="{% url pulse %}">NATIONAL PULSE</a> </li>
+{#                    <li><a href="{% url pulse %}">NATIONAL PULSE</a> </li>#}
 	                {% if user.is_authenticated %}
 	                   <li><a href="{% url ureport-polls %}">POLL ADMIN</a></li>
 	                   <li><a href="{% url messagelog %}">MESSAGE LOG</a></li>
