--- a/ureport/templates/ureport/national_pulse.html
+++ b/ureport/templates/ureport/national_pulse.html
@@ -41,7 +41,7 @@
 {% block content %}
 <div class="container">
     <div id="ug-chart">
-        <h3>Colors Range From Yellow - Green - Blue. that reflects the percentage of most dominant category over<br/> the  contribution From Low - High </h3>
+        <h3>Colors Range From Yellow - Green - Blue. Number of messages sent by a district<br/> the  contribution From Low - High </h3>
         <a class="reset" href="javascript:ugChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
         <span class="reset" style="display: none;"> | Current filter: <span class="filter"></span></span>
 
